[gd_scene load_steps=4 format=3 uid="uid://d53r2bj2swkl"]

[ext_resource type="Script" uid="uid://dtoifadfmcmo0" path="res://Entities/cargo_vehicles/vehicle_path_follower.gd" id="1_bfkkk"]
[ext_resource type="Script" uid="uid://d2fbg63xvs3ca" path="res://Debug/state_label.gd" id="2_vm23o"]
[ext_resource type="Texture2D" uid="uid://pe3kr2xvjs2s" path="res://Assets/Images/placeholder/exclamation_point.png" id="3_b8jdo"]

[node name="VehiclePathFollower" type="PathFollow2D" groups=["Vehicles"]]
loop = false
script = ExtResource("1_bfkkk")

[node name="Sprites" type="Node2D" parent="."]

[node name="LoadingWaitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="InspectionWaitTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="DebugInfo" type="Node2D" parent="."]

[node name="StateLabel" type="Label" parent="DebugInfo"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 16.0
offset_right = 30.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "State"
horizontal_alignment = 1
script = ExtResource("2_vm23o")

[node name="Area2D" type="Area2D" parent="."]

[node name="ReadyForInspection" type="Node2D" parent="."]
visible = false

[node name="ReadyForInspectionSprite" type="Sprite2D" parent="ReadyForInspection"]
position = Vector2(0, -48)
texture = ExtResource("3_b8jdo")

[connection signal="timeout" from="LoadingWaitTimer" to="." method="_on_loading_wait_timer_timeout"]
[connection signal="timeout" from="InspectionWaitTimer" to="." method="_on_inspection_wait_timer_timeout"]
